First function exercise.